<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F56757"
    android:orientation="vertical">

    <TextView
        android:id="@+id/apple_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apple_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="6dp" />

    <ImageView
        android:id="@+id/apple_imageView"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:contentDescription="@string/product3_description"
        app:srcCompat="@drawable/apple"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/description3_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/product3_description"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/price_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price3"

            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quantity_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/quantity"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quantity3_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/initial_quantity3"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="addItem"
            android:padding="5dp"
            android:text="@string/plus_item3"
            android:textSize="36sp" />

        <Button
            android:id="@+id/minus_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:onClick="removeItem"
            android:padding="5dp"
            android:text="@string/minus_item"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/subtotal_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/subtotal_label"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/subtotal3_price_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/subtotal_price3"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>