<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <TextView
        android:id="@+id/total_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_amount"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/message_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvq_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvq_amount"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/total_textView"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/tps_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tps_amount"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tvq_textView"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/end_total_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_total_amount"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tps_textView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/message_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="@string/message"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />
</android.support.constraint.ConstraintLayout>